# digger

./: .gitignore  CLAUDE_PROJECT_PROTOCOL.md  DIGGER_COMPLETE_PRESERVATION.html  README.md  pyproject.toml  requirements.txt
RAG/: 1_Cybersecurity_in_Organisations.md  2_Computer_components.md  3_Virtualisation.md  4_Windows_OS.md  5_Linux_OS.md  6_Networking.md  7_Net_Troubleshoot.md  8_IoT.md  general_notes.md  portability-test.md
config/: default.yaml
digger/: __init__.py  cli.py  config.py  ollama.py  rag.py  session.py  voice.py
digger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory/: session_20260122_001209.txt  session_20260122_001259.txt  session_20260122_002847.txt  session_20260122_002902.txt  session_20260122_003006.txt  session_20260122_003243.txt  session_20260122_004252.txt  session_20260122_004407.txt  session_20260122_005104.txt  session_20260122_005333.txt  session_20260122_005400.txt  session_20260122_005559.txt  session_20260122_005611.txt  session_20260122_005708.txt  session_20260122_010046.txt  session_20260122_010345.txt  session_20260122_011241.txt  session_20260122_011326.txt  session_20260122_012238.txt  session_20260122_012318.txt  session_20260122_012706.txt  session_20260122_013430.txt  session_20260122_013940.txt  session_20260122_015149.txt  session_20260122_023736.txt  session_20260122_024408.txt  session_20260122_114416.txt  session_20260122_120104.txt  session_20260122_120210.txt  session_20260122_120725.txt  session_20260122_130342.txt  session_20260122_130754.txt  session_20260122_142625.txt  (+16 more)
(+2 files in other folders)
